--- a/6.4/ansible/group_vars/varnish.yml
+++ b/6.4/ansible/group_vars/varnish.yml
@@ -13,7 +13,15 @@ flightdeck_root_prompt: '\u@flight-deck-varnish:\w# '
 flightdeck_user_prompt: '\u@flight-deck-varnish:\w$ '
 
 flightdeck_run_commands: |
-  if [ -f "/config/varnish/flight-deck-varnish.yml" ]; then
+  if [ -n "${FLIGHTDECK_CONFIG}" ]; then
+    config_file=$(mktemp "${TMPDIR:-/tmp/}$(basename $0).XXXXXXXXXXXX")
+    echo "$FLIGHTDECK_CONFIG" | base64 -d > $config_file
+    ansible-playbook -i /ansible/inventories/all.ini -e "@${config_file}" /ansible/run.yml
+  elif [ -f "${FLIGHTDECK_CONFIG_FILE}" ]; then
+    ansible-playbook -i /ansible/inventories/all.ini -e "@${FLIGHTDECK_CONFIG_FILE}" /ansible/run.yml
+  elif [ -f "/config/varnish/flightdeck-varnish.yml" ]; then
+    ansible-playbook -i /ansible/inventories/all.ini -e "@/config/varnish/flightdeck-varnish.yml" /ansible/run.yml
+  elif [ -f "/config/varnish/flight-deck-varnish.yml" ]; then
     ansible-playbook -i /ansible/inventories/all.ini -e "@/config/varnish/flight-deck-varnish.yml" /ansible/run.yml
   else
     ansible-playbook -i /ansible/inventories/all.ini /ansible/run.yml
