--- a/6.4/ansible/group_vars/varnish.yml
+++ b/6.4/ansible/group_vars/varnish.yml
@@ -18,6 +18,21 @@ flightdeck_motd_links:
   - name: ' Learn more'
     url: 'https://flightdeck.ten7.com/'
 
+flightdeck_init_commands: |
+  if [ -n "${FLIGHTDECK_CONFIG}" ]; then
+    config_file=$(mktemp "${TMPDIR:-/tmp/}$(basename $0).XXXXXXXXXXXX")
+    echo "$FLIGHTDECK_CONFIG" | base64 -d > $config_file
+    ansible-playbook -i /ansible/inventories/all.ini -e "@${config_file}" /ansible/init.yml
+  elif [ -f "${FLIGHTDECK_CONFIG_FILE}" ]; then
+    ansible-playbook -i /ansible/inventories/all.ini -e "@${FLIGHTDECK_CONFIG_FILE}" /ansible/init.yml
+  elif [ -f "/config/varnish/flightdeck-varnish.yml" ]; then
+    ansible-playbook -i /ansible/inventories/all.ini -e "@/config/varnish/flightdeck-varnish.yml" /ansible/init.yml
+  elif [ -f "/config/varnish/flight-deck-varnish.yml" ]; then
+    ansible-playbook -i /ansible/inventories/all.ini -e "@/config/varnish/flight-deck-varnish.yml" /ansible/init.yml
+  else
+    ansible-playbook -i /ansible/inventories/all.ini /ansible/init.yml
+  fi
+
 flightdeck_run_commands: |
   if [ -n "${FLIGHTDECK_CONFIG}" ]; then
     config_file=$(mktemp "${TMPDIR:-/tmp/}$(basename $0).XXXXXXXXXXXX")
