Fix broken skipCache configuration, add Drupal uncachable exception.

--- a/6.4/ansible/group_vars/varnish.yml
+++ b/6.4/ansible/group_vars/varnish.yml
@@ -73,25 +73,25 @@ flightdeck_varnish_defaults:
   backends:
     - "{{ flightdeck_varnish_default_backend }}"
   skipCache:
-    - "^/status\\.php$"
-    - "^/update\\.php"
-    - "^/install\\.php"
-    - "^/core/install\\.php"
-    - "^/wp-login\\.php$"
-    - "^/apc\\.php$"
-    - "^/admin"
-    - "^/admin/.*$"
-    - "^/user"
-    - "^/user/.*$"
-    - "^/users/.*$"
-    - "^/info/.*$"
-    - "^/flag/.*$"
-    - "^/wp-admin/.*$"
-    - "^/edit.php$"
-    - "^/post.php$"
-    - "^/wp-cron.php$"
-    - "^.*/ahah/.*$"
-    - "^/system/files/.*$"
+    - "/status\\.php"
+    - "/update\\.php"
+    - "/install\\.php"
+    - "/core/install\\.php"
+    - "/wp-login\\.php"
+    - "/apc\\.php"
+    - "/admin"
+    - "/admin/.*"
+    - "/user"
+    - "/user/.*"
+    - "/users/.*"
+    - "/info/.*"
+    - "/flag/.*"
+    - "/wp-admin/.*"
+    - "/edit.php"
+    - "/post.php"
+    - "/wp-cron.php"
+    - "^.*/ahah/.*"
+    - "/system/files/.*"
   keepCookies:
     - "SESS[a-z0-9]+"
     - "SSESS[a-z0-9]+"
@@ -102,7 +102,7 @@ flightdeck_varnish_defaults:
     - "wp-settings-[0-9]+"
     - "wp-settings-time-[0-9]+"
   statusCheck: yes
-  statusCheckUrl: "^/__flightdeck\\-status$"
+  statusCheckUrl: "/__flightdeck\\-status$"
   statusCheckMessage: "Check successful"
   secret: "secretish"
   hostPort: "6081"
